--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <title></title>
     </head>
     <body>
+        <h1>Two Terraces Vineyard, 450 Kereru Road, Hastings</h1>
+        <div id="map">
+        </div>
         <div id="map">
         </div>
         <script src="js/qgis2web_expressions.js"></script>
